Resolve outstanding code smells/tech debt identified by sonarqube